# mios32

./: .gitignore  CLAUDE.md  Makefile  README.md
doc/: MBSEQV4_GENERATIVE_PLATFORM_DESIGN.md  MBSEQV4_PAGES_MANUAL.md
doc/plans/: 2026-05-25-test-session-rig.md  2026-06-09-tension-workbench.md  (+18 more)
tests/: .gitignore  README.md  capture_now.py  conftest.py  diag_listen.py  diag_msp.py  diag_play.py  diag_polyrhythm.py  diag_render.py  diag_robotize.py  discover.py  pyproject.toml
tests/apps/seq_v4/: test_bounce.py  test_capture_as_heard.py  test_capture_clkdiv_alignment.py  test_capture_drift_leak.py  test_capture_force_scale.py  test_capture_gesture.py  test_capture_perf.py  test_capture_precise_gate.py  test_capture_recorder_to_slot.py  test_capture_span.py  test_capture_span_gesture.py  test_capture_synch_measure.py  test_capture_to_slot.py  test_capture_to_track.py  test_capture_while_playing.py  test_chord_mask.py  test_clock_step.py  test_encoder.py  test_fearless_checkpoint.py  test_fearless_switching.py  test_freeze.py  test_generators.py  test_genstate_v4.py  test_phrase_morph.py  test_phrases.py  test_pitch_chain.py  test_pitchgen_bounce.py  test_pitchgen_engage_autojump.py  test_pitchgen_lifecycle.py  test_pitchgen_mutate_path.py  test_pitchgen_step6.py  test_pitchgen_step6h.py  test_processor_capture.py  test_pull_gesture.py  test_render_perf.py  test_rigs.py  test_rng_determinism.py  test_robotize.py  test_smoke.py  test_switch_quantize.py  (+5 more)
tests/fixtures/AUTOTEST/: CONTENTS.md
tests/harness/: __init__.py  board.py  rigs.py  sysex.py
tools/: new-app.sh
(+72 files in other folders)
