[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "midibox-tests"
version = "0.1.0"
description = "Hardware-in-the-loop test harness for MIDIbox firmware (SEQ V4 first)."
requires-python = ">=3.10"
dependencies = [
    "python-rtmidi>=1.5",
    "mido>=1.3",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.setuptools]
packages = ["harness"]

[tool.pytest.ini_options]
testpaths = ["apps"]
addopts = "-ra --timeout=10"
markers = [
    "hardware: requires the SEQ V4 board to be connected over USB MIDI",
]
